docs/grammar.txt
IFJ language grammar
====================

The parser is recursive descent, split in two layers:

  1. LL(1) for the program, functions, and statements (parse_program /
     parse_func / parse_stmt in syntal.c).
  2. Pratt / precedence climbing for expressions (parse_expr … parse_primary).
     In the LL grammar, EXPR is a terminal: when the LL parser expects an
     expression it hands the current token to the expression parser.

Lookahead is one token. Alternatives of a nonterminal never share a FIRST
token. Epsilon rules use FOLLOW. The dangling-else conflict is resolved by
always binding else to the nearest if (prefer the else alternative over eps).

Tokens (terminals)
------------------
  type keywords:  auto  int  double  string
  control:        if  else  for  while  do  return  cin  cout
  literals:       INT  REAL  STRING
  id
  operators:      + - * / %  == != < > <= >=  && || !  =  << >>
  punctuation:    ( ) { } , ;
  $               end of file

auto is a syntactic type. Using it as a function return type or parameter
type is a semantic error (SEM_OTHER_ERR), not a syntax error.


1. Program and functions
------------------------

  0   PROG        -> FUNC PROG_N
  1   PROG_N      -> FUNC PROG_N
  2   PROG_N      -> eps                          FOLLOW = { $ }

  3   FUNC        -> TYPE id ( FD_PARAM ) FUNC_REST

  4   FD_PARAM    -> eps                          FOLLOW = { ) }
  5   FD_PARAM    -> TYPE id FD_PARAM_N
  6   FD_PARAM_N  -> , TYPE id FD_PARAM_N
  7   FD_PARAM_N  -> eps                          FOLLOW = { ) }

  8   FUNC_REST   -> ;
  9   FUNC_REST   -> BLOCK

A program is one or more functions. FUNC_REST ; is a forward declaration
(no body). FUNC_REST BLOCK is a definition. Nested functions are illegal
because FUNC is only derived from PROG.


2. Statements
-------------

 10   BLOCK       -> { STAT_LIST }
 11   STAT_LIST   -> STAT STAT_LIST
 12   STAT_LIST   -> eps                          FOLLOW = { } }

 13   STAT        -> BLOCK
 14   STAT        -> ;
 15   STAT        -> TYPE id VAR_DEF ;
 16   STAT        -> if ( EXPR ) STAT ELSE_OPT
 17   STAT        -> for ( FOR_INIT EXPR_OPT ; FOR_ITER ) STAT
 18   STAT        -> while ( EXPR ) STAT
 19   STAT        -> do STAT while ( EXPR ) ;
 20   STAT        -> return EXPR_OPT ;
 21   STAT        -> cin >> id ID_LIST
 22   STAT        -> cout << EXPR COUT_TAIL
 23   STAT        -> id STAT_ID                   /* factor id */

 24   STAT_ID     -> = EXPR ;
 25   STAT_ID     -> ( ARGS ) ;

 26   ELSE_OPT    -> else STAT
 27   ELSE_OPT    -> eps                          FOLLOW = FIRST(STAT) U { } , $ }
                                                    minus { else }

 28   VAR_DEF     -> eps                          FOLLOW = { ; }
 29   VAR_DEF     -> = EXPR

 30   FOR_INIT    -> TYPE id VAR_DEF ;
 31   FOR_INIT    -> id = EXPR ;
 32   FOR_INIT    -> ;

 33   EXPR_OPT    -> EXPR
 34   EXPR_OPT    -> eps                          FOLLOW = { ; }

 35   FOR_ITER    -> id = EXPR
 36   FOR_ITER    -> eps                          FOLLOW = { ) }

 37   ID_LIST     -> >> id ID_LIST
 38   ID_LIST     -> ;                            FOLLOW after last id = { ; }

 39   COUT_TAIL   -> << EXPR COUT_TAIL
 40   COUT_TAIL   -> ;

 41   TYPE        -> auto | int | double | string

Notes
  - if / while / for / do bodies are STAT, so a single statement or a block
    is allowed (unlike the old grammar, which used a bare EXPR after if).
  - Assignment always ends with ;.
  - id is factored: = starts an assignment, ( starts a call statement.
    There is no other statement that starts with id, so this is LL(1).
  - for matches C-like optional parts: empty init, empty condition, empty
    increment. Increment, if present, is only id = EXPR (as implemented).
  - return may omit the expression (return ;).
  - Empty statement ; is a no-op.


3. Expressions (precedence grammar)
-----------------------------------
Lowest to highest binding. Binary operators are left-associative.
Unary operators are right-associative.

  EXPR     -> OR

  OR       -> AND OR'
  OR'      -> || AND OR' | eps

  AND      -> EQ AND'
  AND'     -> && EQ AND' | eps

  EQ       -> REL EQ'
  EQ'      -> == REL EQ' | != REL EQ' | eps

  REL      -> ADD REL'
  REL'     -> < ADD REL' | > ADD REL' | <= ADD REL' | >= ADD REL' | eps

  ADD      -> MUL ADD'
  ADD'     -> + MUL ADD' | - MUL ADD' | eps

  MUL      -> UNARY MUL'
  MUL'     -> * UNARY MUL' | / UNARY MUL' | % UNARY MUL' | eps

  UNARY    -> - UNARY | ! UNARY | PRIMARY

  PRIMARY  -> INT | REAL | STRING
            | id CALL_OPT
            | ( EXPR )

  CALL_OPT -> ( ARGS ) | eps                      FOLLOW = operators, ; , ) , ,

  ARGS     -> eps                                 FOLLOW = { ) }
  ARGS     -> EXPR ARGS_N
  ARGS_N   -> , EXPR ARGS_N | eps                 FOLLOW = { ) }

Operator precedence (high → low)
  unary  - !
  * / %
  + -
  < > <= >=
  == !=
  &&
  ||

Call vs identifier in an expression is the same id factoring as statements:
after id, ( means a call, anything else means a variable.


4. LL(1) predict table (statement layer)
----------------------------------------
Nonterminal     lookahead                         rule
PROG            auto int double string            0
PROG_N          auto int double string            1
                $                                 2
FUNC            auto int double string            3
FD_PARAM        )                                 4
                auto int double string            5
FD_PARAM_N      ,                                 6
                )                                 7
FUNC_REST       ;                                 8
                {                                 9
STAT_LIST       FIRST(STAT)                       11
                }                                 12
STAT            {                                 13
                ;                                 14
                auto int double string            15
                if                                16
                for                               17
                while                             18
                do                                19
                return                            20
                cin                               21
                cout                              22
                id                                23
STAT_ID         =                                 24
                (                                 25
ELSE_OPT        else                              26
                otherwise                         27
VAR_DEF         =                                 29
                ;                                 28
FOR_INIT        auto int double string            30
                id                                31
                ;                                 32
EXPR_OPT        FIRST(EXPR)                       33
                ;                                 34
FOR_ITER        id                                35
                )                                 36
ID_LIST         >>                                37
                ;                                 38
COUT_TAIL       <<                                39
                ;                                 40
TYPE            auto / int / double / string      41

FIRST(STAT) = { {  ;  auto int double string  if for while do return
                 cin cout  id }

FIRST(EXPR) = { INT REAL STRING  id  (  -  ! }


5. What the old draft got wrong
-------------------------------
  - STAT_N had two productions under one number (eps and STAT STAT_N).
  - Assignment id = EXPR had no semicolon.
  - if/else bodies were EXPR, so return / cin / assignment after if were
    illegal.
  - id always meant assignment; foo(1); could not be derived.
  - for required a typed declaration, both expressions, an increment
    assignment, and a block body.
  - while/do existed in the draft but not in the scanner token list; they
    are now first-class keywords.
  - EXPR was a black-box token with no operator grammar.
  - Function-call arguments were missing in both statements and expressions.
